app.css
html {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

body {
  font-family: futura, "helvetica neue";
  font-size: 24px;
  margin-bottom: 4em;
  margin-left: 1em;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.project-editor {
  display: flex;
  flex-direction: column;
  width: 50%;
}

input {
  border-radius: 0.2em;
  height: 1.2em;
  padding: 0.25em;
  font-size: 1em;
  text-align: left;
  flex-grow: 1;
}

div[contenteditable] {
  border: 2px dashed #777;
  border-radius: 0.2em;
  padding: 0.2em;
  margin-top: 0.2em;
  margin-bottom: 0.2em;
  font-size: 0.9em;
  font-family: "Helvetica Neue", sans-serif;
  flex-grow: 1;
}

.form-pair {
  display: flex;
  margin-top: 1em;
  flex-wrap: wrap;
}

.form-pair label {
  width: 8em;
}

.form-pair .value-container {
  flex-grow: 1;
  display: flex;
}

.things-done-value-container {
  flex-direction: column;
}

.hidden {
  display: none !important;
  opacity: 0;
  transition: opacity 1s;
}

#status-message {
  background-color: #ffffee;
}

.zoom-protect-container {
  /* margin-left: 1em; */
  /* margin-bottom: 1em; */
  display: flex;
  width: 100%;
  align-items: center;
}

.gutter {
  width: 1em;
}

.project-region {
  pointer-events: none;
  fill: hsla(219, 22%, 73%, 0.5);
}

.label {
  pointer-events: none;
}

.plant-layer rect {
  stroke: hsla(0, 0%, 100%, 0.5);
  stroke-width: 1; 
}

.plant-layer rect.plant-backing {
  stroke: none;
}

header {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.title {
  font-size: 2em;
}

.view-nav {
  margin-top: 1em;
  margin-bottom: 1em;
  display: flex;
  align-items: center;
}

.view-button {
  cursor: pointer;
  margin: 0.25em;
}

.active-view-button {
  font-weight: bold;
  font-size: 1.5em;
}

.github-info {
  margin-top: 2em;
  margin-bottom: 2em;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.github-info input {
  width: 60%;
  height: 2em;
  margin-left: 1em;
  /* padding is not accepted by Firefox here. */
}

.github-info label {
  /* text-align: right; */
}

.github-info button {
  background-color: white;
  padding: 0.5em;
  border-radius: 1em;
  border-width: 1px;
  border-color: #333;
  font-size: 1.2em;
  font-weight: bold;
  /* height: 2.4em; */
  margin-top: 1em;
  cursor: pointer;
  font-family: futura;
  text-transform: uppercase;
}

header {
  margin-bottom: 2em;
}

.explanation {
  font-family: Garamond, Georgia;
  font-size: 0.8em;
}

a {
  color: black;
}

#garden-board {
  z-index: 1;
  margin-left: 2%;
}

.details-layer {
  position: fixed;
  width: 100%;
  z-index: 1000;
  background-color: transparent;
  pointer-events: none;
  top: 0px;
}

.details-box {
  z-index: inherit;
  background-color: white;
  width: 40%;
  min-width: 200px;
  margin-left: 28%;
  margin-top: 100px;
  pointer-events: auto;
  box-shadow: hsla(0, 0%, 0%, 0.25) 0 2px 10px;
  padding: 1em;
  border-radius: 0.4em;
  font-size: 0.8em;
}

.project-details {
  margin-bottom: 1em;
  flex-grow: 1;
}

.name-link {
  font-size: 1.5em;
  text-decoration: none;
  font-weight: bold;
  display: block;
  margin-bottom: 0.25em;
}

.date-link {
  color: white;
  font-weight: bold;
  font-size: 1.1em;
  text-decoration: none;
  margin-bottom: 0.5em;
  display: block;
}

.deed-details {
  /*border: 1px dotted;*/
  background-color: #444;
  color: white;
  padding: 0.75em;
  border-radius: 0.25em;
}

.deed-details .name {
}

.deed-plant {
  font-size: 1.5em;
  pointer-events: none;
  height: 40px;
  dy: 40px;
}

.details-top-part {
  display: flex;
}

.details-box .close-button {
  font-weight: bold;
  cursor: pointer;
  background-color: white;
  padding: 0.5em;
  border-radius: 1em;
  border-width: 1px;
  border-color: #333;
  font-family: futura;
  margin-bottom: 1.5em;
}

.destroyed {
  display: none;
}

.garden {
  background-color: hsl(86, 59%, 58%);
}

@media all and (max-width: 480px) {
  .details-box {
    width: 80%;
    max-width: 200px;
    margin-left: 7%;
    padding: 1em;
    border-radius: 0.4em;
  }
}

@media all and (max-height: 320px) {
  .details-box {
    width: 70%;
    max-width: inherit;
    max-height: 240px;
    margin-left: 2%;
    padding: 1em;
    border-radius: 0.4em;
    overflow: scroll;
  }
}

@media all and (max-height: 568px) {
  .details-box {
    max-height: 500px;
    overflow: scroll;
  }
}

